Bug 441376 - Extracting archives doesn't work
Summary: Extracting archives doesn't work
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.7.2
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
: 441442 449705 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-08-22 16:11 UTC by Jazz
Modified: 2022-04-07 17:55 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Extract popup menu (60.39 KB, image/png)
2021-08-22 21:19 UTC, Jazz
Details
Patch to apply to version 2.7.2 (3.89 KB, patch)
2022-02-06 17:53 UTC, Yaroslav Sidlovsky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jazz 2021-08-22 16:11:31 UTC
SUMMARY
I just tried to extract zip/rar archives as usual but since today it doesn't work. The same feature works in Dolphin as usual.

STEPS TO REPRODUCE
1. Right click at any archive
2. Extract > Extract archive here

OBSERVED RESULT
From the logs:
22 Aug 2021 17:59:21	kwin_x11	file:///usr/share/kwin/aurorae/MenuButton.qml:11: TypeError: Cannot read property 'closeOnDoubleClickOnMenu' of null
22 Aug 2021 17:59:29	kwin_x11	kwin_core: XCB error: 152 (BadDamage), sequence: 200, resource id: 10988858, major code: 143 (DAMAGE), minor code: 2 (Destroy)
22 Aug 2021 17:59:29	kwin_x11	kwin_core: XCB error: 152 (BadDamage), sequence: 203, resource id: 10988808, major code: 143 (DAMAGE), minor code: 2 (Destroy)


EXPECTED RESULT
The option should extract an archive.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 5.10.59-1-MANJARO
(available in About System)
KDE Plasma Version: 5.22.4
KDE Frameworks Version: 5.85.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Davide Gianforte 2021-08-22 21:07:40 UTC
Can you post a screen of the popup menu? Do you have updated system recently?
Comment 2 Jazz 2021-08-22 21:19:41 UTC
Created attachment 140958 [details]
Extract popup menu

Yes, I had a major system update quite recently.
Comment 3 Jazz 2021-08-22 21:40:03 UTC
Here's the output when I start krusader in CLI and try to extract something:
https://pastebin.com/raw/0NsaEU6h
Comment 4 Davide Gianforte 2021-08-23 16:31:01 UTC
It seems you don't have kdeinit installed; it comes from the package kinit. Can you install/reinstall?
Comment 5 Jazz 2021-08-24 15:47:20 UTC
Since the latest update, Manjaro got rid of the package kinit as a dependency. 
https://bugs.archlinux.org/task/71840

I installed it manually and still can't make extracting work. After another try, the output from the logs shows this:

24 Aug 2021 17:40:27	kwin_x11	kwin_core: XCB error: 152 (BadDamage), sequence: 47994, resource id: 14684163, major code: 143 (DAMAGE), minor code: 2 (Destroy)
24 Aug 2021 17:40:27	kwin_x11	kwin_core: XCB error: 152 (BadDamage), sequence: 47997, resource id: 14684143, major code: 143 (DAMAGE), minor code: 2 (Destroy)


And if I run it from the terminal, the output is this:
https://pastebin.com/raw/qTFhRJWc
Comment 6 Davide Gianforte 2021-08-24 17:41:47 UTC
It could be related to #441442, a recent update in Frameworks and Applications made plugin management a bit different with some issue.
Comment 7 Jazz 2021-08-24 17:48:47 UTC
(In reply to Davide Gianforte from comment #6)
> It could be related to #441442, a recent update in Frameworks and
> Applications made plugin management a bit different with some issue.

Agreed. those two are related. 
Ok, I'll wait for the next update then. Thank you.
Comment 8 Driglu4it 2021-08-27 20:16:04 UTC
*** Bug 441442 has been marked as a duplicate of this bug. ***
Comment 9 empyreal 2021-09-03 10:14:14 UTC
Same here after upgrade to Plasma 5.22.4:
13:11:55.872-warning kf.coreaddons unknown@0 # no metadata found in "/usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kio/desktop.so" "Failed to extract plugin meta data from '/usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kio/desktop.so'"
13:11:55.874-warning kf.coreaddons unknown@0 # no metadata found in "/usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kio/applications.so" "Failed to extract plugin meta data from '/usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kio/applications.so'"

Operating System: Kubuntu 21.04
KDE Plasma Version: 5.22.4
KDE Frameworks Version: 5.85.0
Qt Version: 5.15.2
Kernel Version: 5.11.0-31-generic (64-bit)
Graphics Platform: X11
Comment 10 Wojciech Więckowski 2021-09-13 11:59:46 UTC
Same here - archive create / extract from right-click menu don't work since Kubuntu Backports update (18.08.2021). No problem when called same way from Dolphin:

.xsession-errors entries:
kwin_core: XCB error: 152 (BadDamage), sequence: 21806, resource id: 14681819, major code: 143 (DAMAGE), minor code: 2 (Destroy)
kwin_core: XCB error: 152 (BadDamage), sequence: 21809, resource id: 14681753, major code: 143 (DAMAGE), minor code: 2 (Destroy)

SOFTWARE/OS VERSIONS
Distribution: Kubuntu 21.04 + backports
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.85.0
Qt Version: 5.15.2
Platform: X11
Kernel: 5.12.0-051200-generic
Comment 11 Yaroslav Sidlovsky 2021-11-19 16:43:53 UTC
Same bug spotted on Fedora 35 with Krusader 2.7.2.
Comment 12 Bug Janitor Service 2021-11-20 16:31:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/krusader/-/merge_requests/73
Comment 13 Piotrek 2021-11-23 17:19:33 UTC
My bug report https://bugs.kde.org/show_bug.cgi?id=444858 is probably duplicate of this one...
Comment 14 Yaroslav Sidlovsky 2021-11-27 16:58:22 UTC
Git commit dc58964435d0a3afc74598c41836bb6f4419eeef by Yaroslav Sidlovsky.
Committed on 20/11/2021 at 16:16.
Pushed by asensi into branch 'master'.

Fixed non working actions for create / extract archives

PanelContextMenu instance created in PanelContextMenu::run now lives long
enough so that create / extract archive actions won't be deleted right after
PanelContextMenu::run call.

Important note: after this patch I've spotted crash, same as in the bug
https://bugs.kde.org/show_bug.cgi?id=443540.

Looks like this crash has been fixed in the KF5 5.89(git).

M  +4    -3    krusader/Panel/listpanel.cpp
M  +2    -0    krusader/Panel/listpanel.h
M  +5    -4    krusader/Panel/panelcontextmenu.cpp
M  +2    -1    krusader/Panel/panelcontextmenu.h

https://invent.kde.org/utilities/krusader/commit/dc58964435d0a3afc74598c41836bb6f4419eeef
Comment 15 Yaroslav Sidlovsky 2022-02-06 17:53:02 UTC
*** Bug 449705 has been marked as a duplicate of this bug. ***
Comment 16 Yaroslav Sidlovsky 2022-02-06 17:53:48 UTC
Created attachment 146346 [details]
Patch to apply to version 2.7.2
Comment 17 Jazz 2022-04-07 17:49:51 UTC
The bug is mark as resolved, but I'm still experiencing the same issue. My Krusader is on version 2.7.2 "Peace of Mind", and my Ark is on version 21.12.3.
Comment 18 Yaroslav Sidlovsky 2022-04-07 17:55:14 UTC
There is no new release (2.7.3) with fix, it's only fixed in master.
Version 2.7.2 still has this bug obviously.
Ping maintainer of your distro to include this patch.