Fixed non working actions for create / extract archives

PanelContextMenu instance created in PanelContextMenu::run now lives long
enough so that create / extract archive actions won't be deleted right after
PanelContextMenu::run call.

Important note: after this patch I've spotted crash, same as in the bug
https://bugs.kde.org/show_bug.cgi?id=443540.

Looks like this crash has been fixed in the KF5 5.89(git).

BUG: 441376